--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "website_url": "website_url",
-  "status_channel_id": "status_channel_id",
-  "guild_id": "guild_id"
+  "website_url": "https://dev-panel.falixnodes.net",
+  "status_channel_id": "1032536137438351370",
+  "guild_id": "995230013697839115"
 }
